# gecco-rs

./: .gitignore  Cargo.toml  PLAN.md  README.md  bench_python.py  build.rs  ccc_mapping.toml
benches/: bench_full.rs  pipeline.rs
bundled-data/: model.crfsuite
scripts/: export_gecco_type_forest.py
src/: bundled_data.rs  data_dir.rs  hmmer.rs  interpro.rs  io.rs  lib.rs  main.rs  model.rs  orf.rs  output.rs  pipeline.rs  refine.rs  util.rs
src/cli/: annotate.rs  build_data.rs  convert.rs  cv.rs  mod.rs  predict.rs  run.rs  train.rs  update_interpro.rs
src/crf/: backend.rs  features.rs  mod.rs
src/io/: compression.rs  genbank.rs  tables.rs
src/sklearn_rf/: mod.rs
src/types/: backend.rs  mod.rs
tests/: conformance_full_pipeline.rs  integration.rs  smoke.rs
tests/data/: gen_merged_gbk.py
