[package]
name = "gecco"
version = "0.5.1"
edition = "2021"
description = "Gene Cluster prediction with Conditional Random Fields"
license = "GPL-3.0-or-later"
repository = "https://github.com/henriksson-lab/gecco-rs"
homepage = "https://github.com/henriksson-lab/gecco-rs"
documentation = "https://docs.rs/gecco"
readme = "README.md"
keywords = ["bioinformatics", "bgc", "genomics", "hmmer", "crf"]
categories = ["science", "command-line-utilities"]
rust-version = "1.82"
autobenches = false
include = [
    "/src/**",
    "/benches/**",
    "/tests/**",
    "/scripts/**",
    "/bundled-data/**",
    "/build.rs",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
]

[[bin]]
name = "gecco"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "bench_pipeline"
path = "benches/pipeline.rs"
required-features = ["bench"]

[[bin]]
name = "bench_full"
path = "benches/bench_full.rs"
required-features = ["bench"]

[features]
default = ["cli"]
cli = ["clap", "indicatif", "ureq", "env_logger"]
bench = []
bundled-data = []

[dependencies]
# Core algorithm
crfsuite-compliant-rs = "0.4"
ndarray = "0.17"
sprs = "0.11"
statrs = "0.17"

# Bio I/O
bio = "3.0"
noodles-fasta = "0.60"
gb-io = "0.9"

# Data I/O
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "2"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

# Compression
flate2 = "1.0"
quick-xml = "0.39"

# CLI (optional)
clap = { version = "4", features = ["derive"], optional = true }
indicatif = { version = "0.18", optional = true }

# Utility
rayon = "1.10"
rand = "0.9"
anyhow = "1"
md5 = "0.8"
ureq = { version = "3", optional = true }
log = "0.4"
env_logger = { version = "0.11", optional = true }
thiserror = "2"
regex-lite = "0.1"

# Gene finding
prodigal-rs = "0.3"

# HMMER
hmmer = { package = "hmmer-pure-rs", version = "0.7" }

[build-dependencies]
flate2 = "1.0"
sha2 = "0.10"
ureq = "3"

[profile.release]
lto = true
